[project]
name = "car-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "playwright>=1.58.0",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
    "streamlit-javascript>=0.1.5",
    "supabase>=2.28.2",
    "tracker_hub",
]

[tool.uv.sources]
tracker_hub = { git = "https://github.com/gohard-lab/tracker-hub.git" }
